--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@mantine/core": "^7.4.1",
+    "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.4.1",
     "@mantine/notifications": "^7.4.1",
     "normalize.css": "^8.0.1",
