--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.4.1",
     "@mantine/notifications": "^7.6.1",
+    "firebase": "^10.8.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
